syntax = "proto3";
package No;
option java_package = "game.proto.no";
option optimize_for = SPEED;
option java_multiple_files = true;

enum No {
    NONE = 0;
    FishReq = 8001;
    FishHookReq = 8002;
    FightStartReq = 2001;
    FightEndReq = 2004;
}